<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher_pkg</name>
  <version>0.0.1</version>
  <description>Launcher package for ros2_geek_pkg</description>
  <maintainer email="igor.recio.h@gmail.com">Igor Recio</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
